--- a/src/css/rnkm-style.css
+++ b/src/css/rnkm-style.css
@@ -7,7 +7,7 @@ html {
 body {
   min-height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #0a0710;
   color: #e0e0e0;
 }
